<resources>
    <string name="app_name">Pixmanity</string>
    <string name="log_in_text">Log In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_text"><u>DON\'T HAVE AN ACCOUNT? SIGN UP!</u></string>

    <string name="image_desc">Image description</string>
    <string name="or_text">OR</string>

    <string name="name_hint">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_btn_text">Register</string>
    <string name="login_text"><u>ALREADY HAVE AN ACCOUNT? LOGIN</u></string>

    <string name="home_text">Home</string>
    <string name="account_text">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portfolio">Portfolio</string>
    <string name="upcoming">Upcoming Events</string>

    <string name="my_profile">My Profile</string>
    <string name="my_appointments">My Appointments</string>
    <string name="my_projects">My Projects</string>
    <string name="chat_support">Chat\/Support</string>
    <string name="share_app">Share Our App</string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_phone">Phone:</string>
    <string name="profile_website">Website:</string>
    <string name="profile_organisation">Organisation</string>
    <string name="profile_bio">Bio:</string>
    <string name="oppointment_name">Project Name:</string>
    <string name="appointment_venue">Location/Venue:</string>
    <string name="appointment_from">From:</string>
    <string name="appointment_to">To:</string>
    <string name="dummy_project_name">The Unknown</string>
    <string name="dummy_venue">Pixmanity Studio</string>
    <string name="dummy_start_time">1400hrs</string>
    <string name="dummy_end_time">1730hrs</string>
    <string name="appointment_time">Time:</string>
    <string name="more_appoinment_details">More Details …</string>
    <string name="projects_progress">Projects In Projects</string>
    <string name="completed_projects_">Complete Projects</string>
    <string name="booking_heading_1">Book Appointment 1/2</string>
    <string name="select_category_text">Category:</string>
    <string name="select_setting_text">Setting:</string>
    <string name="outdoor_setting_text">Outdoors</string>
    <string name="indoors_radio_text">Indoors</string>
    <string name="self_booked_text">Self Booked</string>
    <string name="house_booked_radio">House Booked</string>
    <string name="continue_button_text">Continue</string>
    <string name="venue_text">Venue:</string>
    <string name="book_appointment_header_text2">Book Appointment 2/2</string>
    <string name="setting_type_text">Setting Type:</string>
    <string name="green_screen_radio_text">Green Screen</string>
    <string name="staged_radio_text">Staged</string>
    <string name="additional_items_text"><u>Additional Options</u></string>
    <string name="make_up_check_box_text">Make Up</string>
    <string name="models_check_box_text">Models</string>
    <string name="costumes_check_box_text">Costumes</string>
    <string name="book_bt_txt">Book Appointment</string>
    <string name="coming_soon_text">Chat/Support Is Coming Soon</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="pix_phone">+26372789345</string>
    <string name="pix_mail">info@pixmainty.com</string>
    <string name="pix_facebook_handle">"Pixmanity "</string>
    <string name="pix_twitter_handle">\@pixmanity_insanity</string>



</resources>