<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cfragments.FullBooking">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="38sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/booking_heading_1"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_category_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/category_list"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/select_setting_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/setting_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/outdoor_setting_text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/indoors_radio_text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/editTextTextPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:hint="@string/appointment_venue"
                android:inputType="textPostalAddress"
                android:textColorHint="@color/colorPrimary"
                android:textSize="22sp"
                app:boxStrokeColor="@color/colorAccent" />

            <RadioGroup
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/self_booked_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/house_booked_radio"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_type_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/green_screen_radio_text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radioButton6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/staged_radio_text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/additional_items_text"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <CheckBox
                android:layout_margin="16dp"
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_up_check_box_text"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/models_check_box_text"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/costumes_check_box_text"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <Button
                android:id="@+id/book_appointment_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_bt_txt"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                />


        </LinearLayout>
    </ScrollView>


</FrameLayout>